--- a/_includes/ejercicios-github.html
+++ b/_includes/ejercicios-github.html
@@ -8,9 +8,11 @@
         <i class="fas fa-book fa-fw"></i> [Clonar el ejercicio]({{ej.classroom}})
       </p>
       {% endif %}
+      {% if ej.repo %}
       <p markdown="span">
         <i class="fab fa-github fa-fw"></i> [Ver enunciado](https://github.com/{{ej.repo}})
       </p>
+      {% endif %}
       {% if ej.apuntes %}
       <p>
         <i class="fas fa-chalkboard-teacher fa-fw"></i> Apuntes
