--- a/_includes/ejercicios-github.html
+++ b/_includes/ejercicios-github.html
@@ -32,7 +32,7 @@
               <li markdown="span">{{c.name}}</li>
             {% endif %}
             {% if c.repo %}
-              <li markdown="span">[Formulario de Soluciones]({{c.name}})</li>
+              <li markdown="span">[Formulario de Soluciones]({{c.repo}})</li>
             {% endif %}              
         </ul>
         {% endfor %}
