--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -39,6 +39,6 @@
         <i class="fa fa-bars"></i>
       </a>
     </li>
-    <li><a href="https://mumuki.io/wollok-obj1" target="_blank">Mumuki <i class="fas fa-external-link-alt"></i></a>
+    <li><a href="https://mumuki.io/unahur-obj1" target="_blank">Mumuki <i class="fas fa-external-link-alt"></i></a>
     </ul>
 </nav>
