--- a/_includes/ejercicios-github.html
+++ b/_includes/ejercicios-github.html
@@ -5,7 +5,7 @@
       <h3><b>{{ej.name}}</b></h3>
       {% if ej.classroom %}
       <p markdown="span">
-        <i class="fas fa-book fa-fw"></i> [Clonar el ejercicio]({{ej.classroom}})
+        <i class="fas fa-book fa-fw"></i> [Aceptar la asignación]({{ej.classroom}})
       </p>
       {% endif %}
       {% if ej.repo %}
